nextcloud/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: aspicon-ca-issuer
    kubernetes.io/ingress.class: nginx
  name: nextcloud-test
spec:
  rules:
  - host: nextcloud-test.dev.k8s.aspicon.lan
    http:
      paths:
      - backend:
          serviceName: nextcloud
          servicePort: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nextcloud-test.dev.k8s.aspicon.lan
    secretName: tls-nextcloud-test.dev.k8s.aspicon.lan
